--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/twevvyLogo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- <script src="https://www.himaker.io/scripts/embed.min.js" async defer data-widget-id="95qietz8"></script> -->
+  <!-- <script src="http://localhost:3000/scripts/embed.js" async defer data-widget-id="PE3YC8Ul6H4J1qNEB8aY"></script> -->
+  <!-- <script src="https://twevvy.vercel.app/scripts/embed.min.js" async defer
+    data-widget-id="PE3YC8Ul6H4J1qNEB8aY"></script> -->
   <title>Twevvy | Share Your Product Twitter Community Easily In Any Website</title>
 </head>
 
